terminando o cabeçalho e o campo de busca

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </div>
         <div class="body">
             <div class="cabecalho">
-                <p>Meu Kanban</p>
+                <div>
+                    <p>Meu Kanban</p>
+                    <img src="images/icones/clip.svg" alt="">
+                </div>
+                
                 <div class="user-photo">
                     <img src="images/profilephoto.png" alt="">
                 </div>
